fix spacing issue

--- a/assets/base.css
+++ b/assets/base.css
@@ -244,7 +244,6 @@ html.no-js .no-js-hidden {
 }
 
 .page-width {
-  max-width: var(--page-width);
   margin: 0 auto;
   padding: 0 1.5rem;
 }
@@ -279,7 +278,6 @@ html.no-js .no-js-hidden {
   }
 
   .page-width-desktop {
-    max-width: var(--page-width);
     padding: 0 5rem;
   }
 }
